--- a/app/src/main/res/layout/cat_details.xml
+++ b/app/src/main/res/layout/cat_details.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:textSize="50dp"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+
+    <ListView
+        android:id="@+id/listDish"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
