--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -5,13 +5,12 @@
     android:orientation="horizontal"
     android:padding="10dp">
 
-
-    <ImageView
-        android:id="@+id/img_sick_avatar"
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/img_dish_avatar"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:src="@drawable/cat_cake" />
+        android:src="@drawable/empty_photo" />
 
     <RelativeLayout
         android:layout_width="0dp"
@@ -19,7 +18,7 @@
         android:layout_weight="4">
 
         <TextView
-            android:id="@+id/txt_sick_name"
+            android:id="@+id/txt_dish_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Bánh ngọt"
@@ -31,7 +30,7 @@
             android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/txt_sick_name"
+            android:layout_below="@+id/txt_dish_name"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="Description" />
