--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="title">#004059</color>
     <color name="window_background">#FFF5F5F5</color>
+
+    <color name="background">#f5f5f5</color>
+    <color name="white">#FFF</color>
+    <color name="grey">#95a5a6</color>
+    <color name="dark">#FF222222</color>
+    <color name="light">#FFEEEEEE</color>
+    <color name="alert">#FFFACD</color>
+    <color name="status">#FF0089A7</color>
+    <color name="bg">#bbcacb</color>
+    <color name="textColor">#747474</color>
 </resources>
