--- a/app/src/main/res/layout/item_clock.xml
+++ b/app/src/main/res/layout/item_clock.xml
@@ -16,7 +16,7 @@
             android:id="@+id/nameClock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Báo thức"
+            android:text="Nhắc nhở"
             android:textSize="20dp"
             android:textStyle="bold" />
 
@@ -30,8 +30,8 @@
 
     <Button
         android:id="@+id/btnSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:background="@drawable/toggle_off" />
