--- a/app/src/main/res/layout/dialog_add_user.xml
+++ b/app/src/main/res/layout/dialog_add_user.xml
@@ -172,7 +172,7 @@
                         android:id="@+id/rbtnMale"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Name" />
+                        android:text="Nam" />
 
                     <RadioButton
                         android:id="@+id/rbtnFemale"
