--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -5,21 +5,21 @@
     android:orientation="horizontal"
     android:padding="5dp">
 
-    <ImageView
-        android:id="@+id/avatar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/cat_cake" />
+    <!--<ImageView-->
+        <!--android:id="@+id/avatar"-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:src="@drawable/cat_cake" />-->
 
     <TextView
         android:id="@+id/msgr"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginRight="35dp"
-        android:background="@drawable/left"
+        android:background="@drawable/buble_left"
         android:paddingBottom="15dp"
-        android:paddingLeft="15dp"
+        android:paddingLeft="20dp"
         android:paddingRight="10dp"
         android:paddingTop="15dp"
         android:text="Sampleleft"
