--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    tools:context="com.infinity.icook.AddUser">
 
-    <ScrollView
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="Thông tin"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="#3399FF" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -84,22 +85,18 @@
                     android:text="@string/birthdate"
                     android:textSize="20dp" />
 
-                <EditText
+                <DatePicker
                     android:id="@+id/txtBirthdate"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    android:layout_weight="10"
-                    android:background="@drawable/square"
-                    android:ellipsize="start"
-                    android:hint="Ngày sinh (dd/mm/yyyy)"
-                    android:padding="5dp" />
+                    android:layout_weight="10" />
 
                 <!--<DatePicker-->
                 <!--android:id="@+id/dpBirthdate"-->
                 <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content" />-->
+                <!--android:layout_height="100dp" />-->
             </LinearLayout>
 
             <View
@@ -200,74 +197,11 @@
                 </RadioGroup>
             </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:text="Lịch sử bệnh"
-                android:textSize="20dp"
-                android:textStyle="bold" />
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:background="#3399FF" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <EditText
-                    android:id="@+id/txtSickHistory"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/square"
-                    android:ellipsize="start"
-                    android:hint=""
-                    android:padding="5dp" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:text="Thói quen"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="#3399FF" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <EditText
-                    android:id="@+id/txtDishLike"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/square"
-                    android:ellipsize="start"
-                    android:hint=""
-                    android:padding="5dp" />
-
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -294,5 +228,4 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    </ScrollView>
 </LinearLayout>
