--- a/app/src/main/res/layout/my_item.xml
+++ b/app/src/main/res/layout/my_item.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_weight="1"
         android:gravity="center">
 
@@ -14,19 +14,21 @@
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TIME" />
+            android:text="TIME"
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
+        android:layout_height="60dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_marginRight="20dp"
         android:layout_weight="1"
         android:gravity="right">
 
         <ImageView
             android:id="@+id/imIcon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/on" />
 
     </LinearLayout>
