--- a/app/src/main/res/layout/dialog_add_user.xml
+++ b/app/src/main/res/layout/dialog_add_user.xml
@@ -9,6 +9,9 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:layout_margin="5dp"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
@@ -97,10 +100,6 @@
                         android:hint="Ngày sinh (dd/mm/yyyy)"
                         android:padding="5dp" />
 
-                    <!--<DatePicker-->
-                    <!--android:id="@+id/dpBirthdate"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
                 </LinearLayout>
 
                 <View
@@ -282,31 +281,35 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnCancel"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
-                    android:orientation="horizontal">
+                    android:layout_weight="1"
+                    android:text="Thoát" />
 
-                    <Button
-                        android:id="@+id/btnCancel"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        android:text="Thoát" />
+                <Button
+                    android:id="@+id/btnSave"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="Thêm" />
 
-                    <Button
-                        android:id="@+id/btnSave"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        android:text="Thêm" />
-
-                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+
 </LinearLayout>
