--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -6,18 +6,22 @@
     android:orientation="vertical">
 
     <LinearLayout
+
+        android:background="@color/title"
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center">
 
             <TextView
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -33,8 +37,9 @@
             android:gravity="center">
 
             <Button
+                android:layout_width="150dp"
                 android:id="@+id/btnExit"
-                android:layout_width="100dp"
+                android:background="@drawable/square"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:text="Thoát"
