--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -45,6 +45,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:textColor="#7d7d7d"
             android:id="@+id/txt_birthdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
             android:text="20/11/1994" />
 
         <TextView
+            android:textColor="#7d7d7d"
             android:id="@+id/txt_height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -63,6 +65,7 @@
             android:text="170 cm" />
 
         <TextView
+            android:textColor="#7d7d7d"
             android:id="@+id/txt_weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
